# Chatbot

./: README.md  main.py  pyproject.toml  requirements.txt
main/: chatbot.py  main.ipynb  tool.ipynb
