[project]
name = "chatbot-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "langchain>=1.2.13",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.3",
    "python-dotenv>=1.2.2",
    "streamlit>=1.55.0",
]
